--- a/home/index.html
+++ b/home/index.html
@@ -6,8 +6,8 @@
     <!-- Open Graph meta tags -->
   <meta property="og:title" content="Carmen Park" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://caarrp.github.io/" />
-  <meta property="og:image" content="https://caarrp.github.io/images/preview.jpg" />
+  <meta property="og:url" content="https://caarrp.github.io/my-webpage/" />
+  <meta property="og:image" content="https://caarrp.github.io/my-webpage/home/images/me_thumb.jpg" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Carmen Park" />
 
