testing web from desktop

--- a/home/index.html
+++ b/home/index.html
@@ -10,9 +10,24 @@
   <meta property="og:image" content="https://caarrp.github.io/my-webpage/home/images/me_thumb.jpg" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Carmen Park" />
+  <!-- Basic styling for full-width layout -->
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
+    .banner-image {
+      width: 100%;
+      display: block;
+    }
+  </style>
+
 
 </head>
 <body>
+    <!-- Full-width banner image -->
+  <img class="banner-image" src="images/me_thumb.jpg" alt="Carmen Park Banner Image" />
+
   <h1>Welcome to My Personal Website</h1>
   <p>This is hosted on GitHub Pages.</p>
 </body>
