--- a/home/index.html
+++ b/home/index.html
@@ -6,7 +6,7 @@
     <!-- Open Graph meta tags -->
   <meta property="og:title" content="Carmen Park" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://caarrp.github.io/my-webpage/" />
+  <meta property="og:url" content="https://caarrp.github.io/my-webpage/home" />
   <meta property="og:image" content="https://caarrp.github.io/my-webpage/home/images/me_thumb.jpg" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Carmen Park" />
@@ -15,20 +15,22 @@
     body {
       margin: 0;
       padding: 0;
+      font-family: "Liberation Mono", monospace;
+
     }
     .banner-image {
       width: 100%;
       display: block;
     }
+
   </style>
-
-
 </head>
 <body>
-    <!-- Full-width banner image -->
-  <img class="banner-image" src="images/me_thumb.jpg" alt="Carmen Park Banner Image" />
 
-  <h1>Welcome to My Personal Website</h1>
+    <!-- Full-width banner image -->
+  <img class="banner-image" src="images/me_thumb.jpg" alt="Carmen Thumb Image" />
+
+  <h1>CARMEN PARK</h1>
   <p>This is hosted on GitHub Pages.</p>
 </body>
 </html>
