class centered-text

--- a/home/index.html
+++ b/home/index.html
@@ -30,7 +30,7 @@
     <!-- Full-width banner image -->
   <img class="banner-image" src="images/me_thumb.jpg" alt="Carmen Thumb Image" />
 
-  <h1>CARMEN PARK</h1>
-  <p>This is hosted on GitHub Pages.</p>
+  <h1 class = "centered-text">CARMEN PARK</h1>
+  <p class = "centered-text">This is hosted on GitHub Pages.</p>
 </body>
 </html>
