--- a/home/index.html
+++ b/home/index.html
@@ -3,6 +3,9 @@
 <head>
   <title>Carmen Park</title>
 
+  <link rel="stylesheet" href="css/styles.css" />
+
+
     <!-- Open Graph meta tags -->
   <meta property="og:title" content="Carmen Park" />
   <meta property="og:type" content="website" />
@@ -11,19 +14,7 @@
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Carmen Park" />
   <!-- Basic styling for full-width layout -->
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: "Liberation Mono", monospace;
 
-    }
-    .banner-image {
-      width: 100%;
-      display: block;
-    }
-
-  </style>
 </head>
 <body>
 
