more images as panels

--- a/home/index.html
+++ b/home/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="css/styles.css" />
+
 <head>
   <title>Carmen Park</title>
 
-  <link rel="stylesheet" href="css/styles.css" />
 
 
     <!-- Open Graph meta tags -->
@@ -19,7 +20,10 @@
 <body>
 
     <!-- Full-width banner image -->
-  <img class="banner-image" src="images/me_thumb.jpg" alt="Carmen Thumb Image" />
+<section class="panel" style="background-image: url('images/me_thumb.jpg');"></section>
+  <section class="panel" style="background-image: url('images/seagull_far.png');"></section>
+  <section class="panel" style="background-image: url('images/seagull_close.png');"></section>
+  <section class="panel" style="background-image: url('images/seagull_wave.png');"></section>
 
   <h1 class = "centered-text">CARMEN PARK</h1>
   <p class = "centered-text">This is hosted on GitHub Pages.</p>
