--- a/home/index.html
+++ b/home/index.html
@@ -20,12 +20,14 @@
 <body>
 
     <!-- Full-width banner image -->
-<section class="panel" style="background-image: url('images/me_thumb.jpg');"></section>
-  <section class="panel" style="background-image: url('images/seagull_far.png');"></section>
-  <section class="panel" style="background-image: url('images/seagull_close.png');"></section>
-  <section class="panel" style="background-image: url('images/seagull_wave.png');"></section>
+  <section class="panel" style="background-image: url('images/me_thumb.jpg');"></section>
+  <section class="panel" style="background-image: url('images/seagull_far.jpg');"></section>
+  <section class="panel" style="background-image: url('images/seagull_close.jpg');"></section>
+  <section class="panel" style="background-image: url('images/seagull_wave.jpg');"></section>
 
+<div class="slide">
   <h1 class = "centered-text">CARMEN PARK</h1>
   <p class = "centered-text">This is hosted on GitHub Pages.</p>
+</div>
 </body>
 </html>
