--- a/home/index.html
+++ b/home/index.html
@@ -24,10 +24,16 @@
   
   <div class="slide">
     <h1 class = "centered-text">CARMEN PARK</h1>
+    <nav class="navbar">
+      <a href="home.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="projects.html">Projects</a>
+      <a href="contact.html">Contact</a>
+    </nav>
     <p class = "centered-text">This is hosted on GitHub Pages.</p>
   </div>
   </section>
-  
+
   <section class="panel" style="background-image: url('images/seagull_far.jpg');"></section>
   <section class="panel" style="background-image: url('images/seagull_close.jpg');"></section>
   <section class="panel" style="background-image: url('images/seagull_wave.jpg');"></section>
