--- a/home/index.html
+++ b/home/index.html
@@ -25,12 +25,19 @@
   <div class="slide">
     <h1 class = "centered-text">CARMEN PARK</h1>
     <nav class="navbar">
-      <a href="home.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="projects.html">Projects</a>
-      <a href="contact.html">Contact</a>
+      <a href="home.html">home</a>
+      <a href="about.html">about</a>
+      <a href="projects.html"><p>projects</a>
+      <a href="contact.html">contact</a>
     </nav>
-    <p class = "centered-text">This is hosted on GitHub Pages.</p>
+    <p class = "centered-text">This is hosted on GitHub Pages.
+    
+    </p>
+    <p class = "centered-text">
+        I have so many things to say about myself I am a greeat folk,
+      as a youth in the 21st century I have been living.
+          I am a person with vested interests in most topics.
+      I am currently a student.</p>
   </div>
   </section>
 
