--- a/home/index.html
+++ b/home/index.html
@@ -35,7 +35,22 @@
     </p>
     <p class = "centered-text">
         
-      I am currently a student.</p>
+      Hello, My name is Carmen Park, my pronouns are they/them, and
+      I am currently an undergraduate student studying Mandarin Chinese
+      and Mathematics and Computer Science* at the university of Oregon.
+          I am passionate about design as a broader concept, and its 
+      broader influence on "life"?
+          I hope to learn more about graphics summer 2025. I will be 
+      conducting undergraduate research with Jason Murphy on geopmetric
+      optics and forier analysis. I will be implementing my work digitally,
+      and by the end of the summer I hope to have a better understanding of
+      linear transormations, their use in software, perspective and focal length
+      calculations in 3D space, and finally other things like light, rendering
+      that are also applied digitally to emulate human vision.
+       </p>
+       <p class = "centered-text"> * = MACS is a single major that covers
+        both mathematics and computer science with less higher level pre-requisites
+        in both fields. </pre-requisites>
   </div>
   </section>
 
