--- a/home/index.html
+++ b/home/index.html
@@ -24,12 +24,15 @@
   
   <div class="slide">
     <h1 class = "centered-text">CARMEN PARK</h1>
+  
+<div class="navbar-wrapper">
     <nav class="navbar">
       <a href="home.html">home</a>
       <a href="about.html">about</a>
       <a href="projects.html"><p>projects</a>
       <a href="contact.html">contact</a>
     </nav>
+  </div>
     <p class = "centered-text">This is hosted on GitHub Pages.
     
     </p>
