maybe thats why empyt space

--- a/home/index.html
+++ b/home/index.html
@@ -28,7 +28,7 @@
     <nav class="navbar">
       <a href="home.html">home</a>
       <a href="about.html">about</a>
-      <a href="projects.html"><p>projects</a>
+      <a href="projects.html">projects</a>
       <a href="contact.html">contact</a>
     </nav>
     <p class = "centered-text">This is hosted on GitHub Pages.
