--- a/home/index.html
+++ b/home/index.html
@@ -40,8 +40,8 @@
       I am currently an undergraduate student studying Mandarin Chinese
       and Mathematics and Computer Science* at the university of Oregon.
           I am passionate about design as a broader concept, and its 
-      broader influence on "life"?
-          I hope to learn more about graphics summer 2025. I will be 
+      broader influence on "life"?<br>
+         <br>    I hope to learn more about graphics summer 2025. I will be 
       conducting undergraduate research with Jason Murphy on geopmetric
       optics and forier analysis. I will be implementing my work digitally,
       and by the end of the summer I hope to have a better understanding of
