trying to many=ually continue panel

--- a/home/index.html
+++ b/home/index.html
@@ -49,13 +49,17 @@
       calculations in 3D space, and finally other things like light, rendering
       that are also applied digitally to emulate human vision.
        </p>
-       <p class = "centered-text"> * = MACS is a single major that covers
-        both mathematics and computer science with less higher level pre-requisites
-        in both fields. </pre-requisites>
+
   </div>
   </section>
 
-  <section class="panel" style="background-image: url('images/seagull_far.jpg');"></section>
+  <section class="panel" style="background-image: url('images/seagull_far.jpg');">
+    <div class="slide">     
+    <p class = "centered-text"> * = MACS is a single major that covers
+        both mathematics and computer science with less higher level pre-requisites
+        in both fields. </p>
+    </div>
+  </section>
   <section class="panel" style="background-image: url('images/seagull_close.jpg');"></section>
   <section class="panel" style="background-image: url('images/seagull_wave.jpg');"></section>
 
