--- a/home/index.html
+++ b/home/index.html
@@ -29,6 +29,8 @@
       <a href="about.html">about</a>
       <a href="projects.html">projects</a>
       <a href="contact.html">contact</a>
+      <a href="more.html">more</a>
+
     </nav>
 
     <h1 class = "centered-text">CARMEN PARK</h1>
