--- a/home/index.html
+++ b/home/index.html
@@ -25,7 +25,7 @@
   <div class="slide">
   
     <nav class="navbar">
-      <a href="home.html">home</a>
+      <a href="index.html">home</a>
       <a href="about.html">about</a>
       <a href="projects.html">projects</a>
       <a href="contact.html">contact</a>
