--- a/home/index.html
+++ b/home/index.html
@@ -64,9 +64,9 @@
         in both fields. </p>
     </div>
   </section>
-  <section class="panel" style="background-image: url('images/seagull_close.jpg');"></section>
+  <!--<section class="panel" style="background-image: url('images/seagull_close.jpg');"></section>
   <section class="panel" style="background-image: url('images/seagull_wave.jpg');"></section>
-
+-->
 
 </body>
 </html>
