--- a/home/index.html
+++ b/home/index.html
@@ -26,10 +26,10 @@
   
     <nav class="navbar">
       <a href="index.html">home</a>
-      <a href="about.html">about</a>
-      <a href="projects.html">projects</a>
-      <a href="contact.html">contact</a>
-      <a href="more.html">more</a>
+      <a href="../about/about.html">about</a>
+      <a href="../projects/projects.html">projects</a>
+      <a href="../contact/contact.html">contact</a>
+      <a href="../more/more.html">more</a>
 
     </nav>
 
@@ -64,9 +64,9 @@
         in both fields. </p>
     </div>
   </section>
-  <!--<section class="panel" style="background-image: url('images/seagull_close.jpg');"></section>
+  <section class="panel" style="background-image: url('images/seagull_close.jpg');"></section>
   <section class="panel" style="background-image: url('images/seagull_wave.jpg');"></section>
--->
+
 
 </body>
 </html>
