--- a/projects/projects.html
+++ b/projects/projects.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="css/styles.css" />
+<link rel="stylesheet" href="static/css/p_styles.css" />
 
 <head>
   <title>Carmen Park</title>
@@ -11,7 +11,7 @@
   <meta property="og:title" content="Carmen Park" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://caarrp.github.io/my-webpage/home" />
-  <meta property="og:image" content="https://caarrp.github.io/my-webpage/home/images/me_thumb.jpg" />
+  <!-- <meta property="og:image" content="https://caarrp.github.io/my-webpage/home/images/me_thumb.jpg" />-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Carmen Park" />
   <!-- Basic styling for full-width layout -->
