--- a/about/about.html
+++ b/about/about.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>About Carmen Park</title>
-  <link rel="stylesheet" href="../css/styles.css" />
+  <title>about Carmen Park</title>
+  <link rel="stylesheet" href="static/css/a_styles.css" />
   
   <!-- Open Graph meta tags -->
-  <meta property="og:title" content="About Carmen Park" />
+  <meta property="og:title" content="about - carmen park" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://caarrp.github.io/my-webpage/about/about.html" />
-  <meta property="og:image" content="https://caarrp.github.io/my-webpage/home/images/me_thumb.jpg" />
+<!--  <meta property="og:image" content="https://caarrp.github.io/my-webpage/home/images/me_thumb.jpg" />-->
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Carmen Park" />
 
 </head>
 
+<body>
+
+    <!-- Full-width banner image -->
+  
+  <div class="slide">
+  
+    <nav class="navbar">
+      <a href="index.html">home</a>
+      <a href="../about/about.html">about</a>
+      <a href="../projects/projects.html">projects</a>
+      <a href="../contact/contact.html">contact</a>
+      <a href="../more/more.html">more</a>
+
+    </nav>
+        
+  <section class="panel" style="background-image: url('images/seagull_close.jpg');"></section>
+
+</body>
+</html>
 
