--- a/contact/contact.html
+++ b/contact/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <title>contact me</title>
-  <link rel="stylesheet" href="../css/styles.css" />
+  <link rel="stylesheet" href="static/css/c_styles.css" />
   
   <!-- Open Graph meta tags -->
   <meta property="og:title" content="About Carmen Park" />
