--- a/home/index.html
+++ b/home/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="static/css/styles.css" />
+<link rel="stylesheet" href="static/css/h_styles.css" />
 
 <head>
   <title>Carmen Park</title>
