--- a/more/more.html
+++ b/more/more.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="css/styles.css" />
+<link rel="stylesheet" href="static/css/m_styles.css" />
 
 <head>
   <title>Carmen Park</title>
