--- a/about/about.html
+++ b/about/about.html
@@ -8,7 +8,7 @@
   <meta property="og:title" content="about - carmen park" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://caarrp.github.io/my-webpage/about/about.html" />
-<!--  <meta property="og:image" content="https://caarrp.github.io/my-webpage/home/images/me_thumb.jpg" />-->
+  <meta property="og:image" content="https://caarrp.github.io/my-webpage/about/images/cows.jpg" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Carmen Park" />
 
@@ -29,7 +29,7 @@
 
     </nav>
         
-  <section class="panel" style="background-image: url('images/seagull_close.jpg');"></section>
+  <section class="panel" style="background-image: url('images/cows.jpg');"></section>
 
 </body>
 </html>
