--- a/contact/contact.html
+++ b/contact/contact.html
@@ -7,14 +7,14 @@
   <!-- Open Graph meta tags -->
   <meta property="og:title" content="About Carmen Park" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://caarrp.github.io/my-webpage/about/about.html" />
-  <meta property="og:image" content="https://caarrp.github.io/my-webpage/home/images/me_thumb.jpg" />
+  <meta property="og:url" content="https://caarrp.github.io/my-webpage/contact/contact.html" />
+  <meta property="og:image" content="https://caarrp.github.io/my-webpage/contact/images/seagull_far.jpg" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Carmen Park" />
 </head>
 
 <body>
-  <section class="panel" style="background-image: url('../images/seagull_far.jpg');">
+  <section class="panel" style="background-image: url('images/seagull_far.jpg');">
     <div class="slide">
       <nav class="navbar">
         <a href="../home/index.html">home</a>
@@ -23,7 +23,7 @@
         <a href="../contact/contact.html">contact</a>
         <a href="../more/more.html">more</a>
       </nav>
-
+</div>
       <h1 class="centered-text">CONTACT ME</h1>
 
       <p class="centered-text">
@@ -31,3 +31,7 @@
         <p class="centered-text">
             my linkedin is <a href="https://www.linkedin.com/in/carmen-park-869a65304/">here</a>
         </p>
+                <p class="centered-text">
+            my github is <a href="https://github.com/caarrp/">here</a>
+        </p>
+  </section>
