--- a/projects/projects.html
+++ b/projects/projects.html
@@ -10,8 +10,8 @@
     <!-- Open Graph meta tags -->
   <meta property="og:title" content="Carmen Park" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://caarrp.github.io/my-webpage/home" />
-  <!-- <meta property="og:image" content="https://caarrp.github.io/my-webpage/home/images/me_thumb.jpg" />-->
+  <meta property="og:url" content="https://caarrp.github.io/carmen-park/more" />
+  <meta property="og:image" content="https://caarrp.github.io/my-webpage/more/images/view_kid.jpg" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Carmen Park" />
   <!-- Basic styling for full-width layout -->
@@ -32,7 +32,7 @@
 
     </nav>
         
-  <section class="panel" style="background-image: url('images/seagull_close.jpg');"></section>
+  <section class="panel" style="background-image: url('images/view_kid.jpg');"></section>
 
 </body>
 </html>
