--- a/home/index.html
+++ b/home/index.html
@@ -57,15 +57,13 @@
   </div>
   </section>
 
-  <section class="panel" style="background-image: url('images/seagull_far.jpg');">
+  <section class="panel" style="background-image: url('images/seagull_close.jpg');">
     <div class="slide">     
     <p class = "centered-text"> * = MACS is a single major that covers
         both mathematics and computer science with less higher level pre-requisites
         in both fields. </p>
     </div>
   </section>
-  <section class="panel" style="background-image: url('images/seagull_close.jpg');"></section>
-  <section class="panel" style="background-image: url('images/seagull_wave.jpg');"></section>
 
 
 </body>
