--- a/more/more.html
+++ b/more/more.html
@@ -10,7 +10,7 @@
     <!-- Open Graph meta tags -->
   <meta property="og:title" content="Carmen Park" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://caarrp.github.io/my-webpage/home" />
+  <meta property="og:url" content="https://caarrp.github.io/carmen-park/more" />
   <meta property="og:image" content="https://caarrp.github.io/my-webpage/home/images/me_thumb.jpg" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Carmen Park" />
@@ -32,7 +32,7 @@
 
     </nav>
         
-  <section class="panel" style="background-image: url('images/seagull_close.jpg');"></section>
+  <section class="panel" style="background-image: url('images/seagull_wave.jpg');"></section>
 
 </body>
 </html>
