--- a/about/about.html
+++ b/about/about.html
@@ -7,7 +7,7 @@
   <!-- Open Graph meta tags -->
   <meta property="og:title" content="about - carmen park" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://caarrp.github.io/my-webpage/about/about.html" />
+  <meta property="og:url" content="https://caarrp.github.io/carmen-park/about/about.html" />
   <meta property="og:image" content="https://caarrp.github.io/my-webpage/about/images/cows.jpg" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Carmen Park" />
@@ -21,7 +21,7 @@
   <div class="slide">
   
     <nav class="navbar">
-      <a href="index.html">home</a>
+      <a href="../home/index.html">home</a>
       <a href="../about/about.html">about</a>
       <a href="../projects/projects.html">projects</a>
       <a href="../contact/contact.html">contact</a>
