--- a/projects/projects.html
+++ b/projects/projects.html
@@ -24,7 +24,7 @@
   <div class="slide">
   
     <nav class="navbar">
-      <a href="index.html">home</a>
+      <a href="../home/index.html">home</a>
       <a href="../about/about.html">about</a>
       <a href="../projects/projects.html">projects</a>
       <a href="../contact/contact.html">contact</a>
