all dark background

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -3,7 +3,8 @@
 <head>
   <title>contact me</title>
   <link rel="stylesheet" href="static/css/c_styles.css" />
-  
+  <link rel="stylesheet" href="static/js/contact.js" />
+
   <!-- Open Graph meta tags -->
   <meta property="og:title" content="About Carmen Park" />
   <meta property="og:type" content="website" />
@@ -11,6 +12,8 @@
   <meta property="og:image" content="https://caarrp.github.io/my-webpage/contact/images/seagull_far.jpg" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Carmen Park" />
+
+
 </head>
 
 <body>
