trying to fix projects

--- a/home/index.html
+++ b/home/index.html
@@ -35,7 +35,7 @@
 
     <h1 class = "centered-text">CARMEN PARK</h1>
 
-    <p class = "centered-text">This is hosted on GitHub Pages.
+    <p class = "centered-text">Hi Im Carmen Park
     
     </p>
     <p class = "centered-text">
