fixed contact me

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="static/css/p_styles.css" />
 
 <head>
-  <title>Carmen Park</title>
+  <title>Carmen Park:Projects</title>
 
 
 
@@ -18,21 +18,16 @@
 
 </head>
 <body>
-
-    <!-- Full-width banner image -->
-  
-  <div class="slide">
-  
+    
     <nav class="navbar">
       <a href="../home/index.html">home</a>
       <a href="../about/about.html">about</a>
       <a href="../projects/projects.html">projects</a>
       <a href="../contact/contact.html">contact</a>
       <a href="../more/more.html">more</a>
-
     </nav>
-        
-  <section class="panel" style="background-image: url('images/view_kid.jpg');"></section>
+  
+  <section class="panel" style="background-image: url('images/_4A_0072.jpg');"></section>
 
 </body>
 </html>
