--- a/projects/projects.html
+++ b/projects/projects.html
@@ -37,6 +37,9 @@
     
     <h1 class = "centered-text">projects</h1>
 
+    <p>  <a href="summer-25.pdf">this</a> is a paper I wrote with Jason Murphy as apart of the UO Math Department's summer 2025 research cohort</p>
+
+
     <p> wrote a raytracer over the summer of 2025 <a href="ray-tracer/ray-tracer.html">here</a></p>
 
     <p > worked on a row reduction helper with Jennifer Linea <a href="https://vaeryniil.github.io/row_reduction_helper/home/">here</a> </p>
