small projects changes

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -18,12 +18,12 @@
 
 </head>
 <body>
-   <section class="panel" style="background-image: url('images/_4A_0072.jpg');"></section>
+   <section class="panel" style="background-image: url('images/_4A_0072.jpg');">
    
 
   <div class="slide">
   
-    <nav class="navbar">
+    <nav class="navbar" >
       <a href="index.html">home</a>
       <a href="../about/about.html">about</a>
       <a href="../projects/projects.html">projects</a>
@@ -37,6 +37,11 @@
     
     <h1 class = "centered-text">projects</h1>
 
+    <!-- <button class="project-button"
+    onclick="location.href='ray-tracer/ray-tracer.html'">
+    Ray Tracer
+    </button>-->
+
     <p>  <a href="summer-25.pdf">this</a> is a paper I wrote with Jason Murphy as apart of the UO Math Department's summer 2025 research cohort</p>
 
 
@@ -48,6 +53,6 @@
 
   </div>
   
-
+</section>
 </body>
 </html>
