p changes #2 from windows

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -42,8 +42,14 @@
     Ray Tracer
     </button>-->
 
-    <p>  <a href="summer-25.pdf">this</a> is a paper I wrote with Jason Murphy as apart of the UO Math Department's summer 2025 research cohort</p>
-
+    <div class="project-box">
+      <a href="summer-25.pdf" class="box-tab">
+        <strong>2025 - SUMMER RESEARCH PROJECT</strong>
+        <span class="box-content">
+          This is a paper I wrote with Jason Murphy as part of the UO Math Department's summer 2025 research cohort
+        </span>
+      </a>
+    </div> 
 
     <p> wrote a raytracer over the summer of 2025 <a href="ray-tracer/ray-tracer.html">here</a></p>
 
