--- a/wave/wave.html
+++ b/wave/wave.html
@@ -20,3 +20,39 @@
     <script src="waveShadows.js"></script>
 </body>
 </html>
+
+<!-- another one
+ example.html - WEB PAGE -->
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Wave Simulation</title>
+    <style>
+        body {
+            margin: 0;
+            background: #001122;
+            font-family: Arial;
+        }
+        canvas {
+            display: block;
+            width: 100%;
+            height: 100vh;
+        }
+    </style>
+</head>
+<body>
+    <canvas id="waveCanvas"></canvas>
+
+    <script>
+        // JavaScript code here
+        const canvas = document.getElementById('waveCanvas');
+        const ctx = canvas.getContext('2d');
+
+        function animate() {
+            // Drawing code...
+            requestAnimationFrame(animate);
+        }
+        animate();
+    </script>
+</body>
+</html>
