issue somehow idk

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -22,10 +22,10 @@
     <div class="slide">
       <nav class="navbar">
         <a href="../home/index.html">home</a>
-        <a href="../about/about.html">about</a>
+      <!-- <a href="../about/about.html">about</a> -->
         <a href="../projects/projects.html">projects</a>
         <a href="../contact/contact.html">contact</a>
-        <a href="../more/more.html">more</a>
+         <!-- <a href="../more/more.html">more</a>-->
       </nav>
       <h1 class="centered-text">CONTACT ME</h1>
 
