--- a/projects/projects.html
+++ b/projects/projects.html
@@ -25,10 +25,10 @@
   
     <nav class="navbar" >
       <a href="index.html">home</a>
-      <a href="../about/about.html">about</a>
+     <!--<a href="../about/about.html">about</a>---> 
       <a href="../projects/projects.html">projects</a>
       <a href="../contact/contact.html">contact</a>
-      <a href="../more/more.html">more</a>
+      <!--<a href="../more/more.html">more</a>---> 
 
     </nav>
 
@@ -51,12 +51,27 @@
       </a>
     </div> 
 
-    <p> wrote a raytracer over the summer of 2025 <a href="ray-tracer/ray-tracer.html">here</a></p>
 
-    <p > worked on a row reduction helper with Jennifer Linea <a href="https://vaeryniil.github.io/row_reduction_helper/home/">here</a> </p>
+
+    <div class="project-box">
+      <a href="ray-tracer/ray-tracer.html" class="box-tab">
+        <strong>2025 - DIY RAY-TRACER</strong>
+        <span class="box-content">
+          Ive written bit about my process working through some tutorials and writing a cpu based ray tracer over the summer.
+        </span>
+      </a>
+    </div> 
+
+    <div class="project-box">
+      <a href="https://vaeryniil.github.io/row_reduction_helper/home/" class="box-tab">
+        <strong>2025 - RREF HELPER</strong>
+        <span class="box-content">
+          Jennifer Linnea and I have been working on a reduced row echelon helper. I focused a lot on the UI desing and web layout styling, Jennifer worked on matrix logic.
+        </span>
+      </a>
+    </div> 
+
       
-    </p>
-
   </div>
   
 </section>
