--- a/home/index.html
+++ b/home/index.html
@@ -26,10 +26,12 @@
   
     <nav class="navbar">
       <a href="index.html">home</a>
-      <a href="../about/about.html">about</a>
+      <!-- <a href="../about/about.html">about</a> -->
+
       <a href="../projects/projects.html">projects</a>
       <a href="../contact/contact.html">contact</a>
-      <a href="../more/more.html">more</a>
+      <!-- <a href="../more/more.html">more</a> -->
+
 
     </nav>
 
