styling and new projects

--- a/home/index.html
+++ b/home/index.html
@@ -42,10 +42,9 @@
     </p>
     <p class = "centered-text">
         
-      Hello, My name is Carmen Park, my pronouns are they/them, and
-      I am currently an undergraduate student studying Mandarin Chinese
-      and Mathematics and Computer Science* at the university of Oregon.
-          I am passionate about design, optics, graphics and user experience.<br>
+      Hello, My name is Carmen, my pronouns are they/them, and
+      I am currently an undergraduate student studying Mathematics and Computer Science* at the university of Oregon.
+          I am passionate about computer graphics, user experience and design.<br>
          <br>    
        </p>
 
@@ -54,9 +53,7 @@
 
   <section class="panel" style="background-image: url('images/seagull_close.jpg');">
     <div class="slide">     
-    <p class = "centered-text"> * = MACS is a single major that covers
-        both mathematics and computer science with less higher level pre-requisites
-        in both fields. </p>
+
     </div>
   </section>
 
