--- a/projects/projects.html
+++ b/projects/projects.html
@@ -24,7 +24,7 @@
   <div class="slide">
   
     <nav class="navbar" >
-      <a href="index.html">home</a>
+      <a href="../home/index.html">home</a>
      <!--<a href="../about/about.html">about</a>---> 
       <a href="../projects/projects.html">projects</a>
       <a href="../contact/contact.html">contact</a>
@@ -55,23 +55,41 @@
 
     <div class="project-box">
       <a href="ray-tracer/ray-tracer.html" class="box-tab">
-        <strong>2025 - DIY RAY-TRACER</strong>
+        <strong>2025 : DIY RAY-TRACER</strong>
         <span class="box-content">
-          Ive written bit about my process working through some tutorials and writing a cpu based ray tracer over the summer.
+          Ive written a bit about my process working through some tutorials and writing a cpu based ray tracer over the summer.
         </span>
       </a>
     </div> 
 
     <div class="project-box">
       <a href="https://vaeryniil.github.io/row_reduction_helper/home/" class="box-tab">
-        <strong>2025 - RREF HELPER</strong>
+        <strong>2025 : RREF HELPER</strong>
         <span class="box-content">
           Jennifer Linnea and I have been working on a reduced row echelon helper. I focused a lot on the UI desing and web layout styling, Jennifer worked on matrix logic.
         </span>
       </a>
     </div> 
 
-      
+    <div class="project-box">
+      <a class="box-tab">
+        <strong>2025 : DRP</strong>
+        <span class="box-content">
+          I worked with Annika Christiansen to learn more about neural networks.
+        </span>
+      </a>
+    </div> 
+
+    <div class="project-box">
+      <a class="box-tab">
+        <strong>2024 : DRP</strong>
+        <span class="box-content">
+          I read "A Mathematical Gift: the interplay between topology, functions, geometry and algebra" 
+          by Kenji Ueno with Yongmin Park.
+        </span>
+      </a>
+    </div> 
+       
   </div>
   
 </section>
