double name fix

--- a/home/index.html
+++ b/home/index.html
@@ -42,7 +42,7 @@
     </p>
     <p class = "centered-text">
         
-      Hello, My name is Carmen, my pronouns are they/them, and
+       my pronouns are they/them, and
       I am currently an undergraduate student studying Mathematics and Computer Science* at the university of Oregon.
           I am passionate about computer graphics, user experience and design.<br>
          <br>    
