unneeded photo in index, styling in projects

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -43,24 +43,73 @@
     </button>-->
 
     <div class="project-box">
-      <a href="summer-25.pdf" class="box-tab">
-        <strong>2025 - SUMMER RESEARCH PROJECT</strong>
+      <a class="box-tab">
+        <strong>2026 : DRP</strong>
         <span class="box-content">
-          This is a paper I wrote with Jason Murphy as part of the UO Math Department's summer 2025 research cohort
+          I am reading "A Practical Guide to Splines" by Carl de Boor with Cory Peters. 
         </span>
       </a>
     </div> 
 
+
+    <div class="project-box">
+      <a href="static/pdf/knit_mesh.pdf" class="box-tab">
+        <strong>2026 : UNDERGRADUATE THESIS</strong>
+        <span class="box-content">
+          I am working with Tao Hou on a program to automate a basic mesh surface into 
+          a knit mesh that is also knittable by hand. I've attatched an abstract of the project.
+        </span>
+      </a>
+    </div> 
+    
+
+
+    <div class="project-box">
+      <a href="https://studentinsurgent.org/" class="box-tab">
+        <strong>2025 - 2026 : TECHNOMANCER</strong>
+        <span class="box-content">
+          As acting technomancer of the student insurgent, I am updating all recent, current and archival pieces from the club to the insurgent website. 
+        </span>
+      </a>
+    </div> 
+
+    <div class="project-box">
+      <a href="static/pdf/FrogByte_Final_HPC_F25.pdf" class="box-tab">
+        <strong>2025 : HPC FINAL PROJECT</strong>
+        <span class="box-content">
+          I worked with a small team to recreate and compare performance of 4 SpMV Formats and Kernels.  
+        </span>
+      </a>
+    </div> 
+
+    <div class="project-box">
+      <a href="static/pdf/summer-25.pdf" class="box-tab">
+        <strong>2025 : SUMMER RESEARCH PROJECT</strong>
+        <span class="box-content">
+          This is a paper I wrote with Jason Murphy as part of the UO Math Department's summer 2025 research cohort.
+        </span>
+      </a>
+    </div> 
 
 
     <div class="project-box">
       <a href="ray-tracer/ray-tracer.html" class="box-tab">
         <strong>2025 : DIY RAY-TRACER</strong>
         <span class="box-content">
-          Ive written a bit about my process working through some tutorials and writing a cpu based ray tracer over the summer.
+          Ive written a bit about my process working through some tutorials and coding a cpu based ray tracer over the summer.
         </span>
       </a>
     </div> 
+
+    <div class="project-box">
+      <a href="static/pdf/wave_optics_in_computer_graphics.pdf" class="box-tab">
+        <strong>2025 : WAVE OPTICS</strong>
+        <span class="box-content">
+          For a final in tecnical writing I wrote a paper looking at how diffraction is modeled in current computer graphics software.
+        </span>
+      </a>
+    </div> 
+
 
     <div class="project-box">
       <a href="https://vaeryniil.github.io/row_reduction_helper/home/" class="box-tab">
