--- a/projects/projects.html
+++ b/projects/projects.html
@@ -68,7 +68,7 @@
       <a href="https://studentinsurgent.org/" class="box-tab">
         <strong>2025 - 2026 : TECHNOMANCER</strong>
         <span class="box-content">
-          As acting technomancer of the student insurgent, I am updating all recent, current and archival pieces from the club to the insurgent website. 
+          As acting technomancer of the student insurgent, I am updating all current and archival pieces from the club to the insurgent website. 
         </span>
       </a>
     </div> 
@@ -77,7 +77,8 @@
       <a href="static/pdf/FrogByte_Final_HPC_F25.pdf" class="box-tab">
         <strong>2025 : HPC FINAL PROJECT</strong>
         <span class="box-content">
-          I worked with a small team to recreate and compare performance of 4 SpMV Formats and Kernels.  
+          I worked with a small team to recreate and compare performance of 4 SpMV Formats and Kernels. I focused on 
+          implementing the CSR5 format and kernel. 
         </span>
       </a>
     </div> 
@@ -86,7 +87,8 @@
       <a href="static/pdf/summer-25.pdf" class="box-tab">
         <strong>2025 : SUMMER RESEARCH PROJECT</strong>
         <span class="box-content">
-          This is a paper I wrote with Jason Murphy as part of the UO Math Department's summer 2025 research cohort.
+          This is a paper I wrote with Jason Murphy as part of the UO Math Department's summer 2025 research cohort. We discussed 
+          fourier optics, geometric optics, with a focus in deriving snells law from Maxwells equations.
         </span>
       </a>
     </div> 
