--- a/projects/projects.html
+++ b/projects/projects.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-   <section class="panel" style="background-image: url('images/_4A_0072.jpg');">
+   <section class="panel" style="background-image: url('/images/_4A_0072.jpg');">
    
 
   <div class="slide">
